--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "solid-start dev",
     "build": "solid-start build",
-    "start": "solid-start start"
+    "start": "solid-start start",
+    "push": "docker buildx build --platform linux/amd64,linux/arm64 --push -t supermomme/codesparks ."
   },
   "type": "module",
   "devDependencies": {
