--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.6",
     "@solidjs/router": "^0.8.3",
+    "@supabase/supabase-js": "^2.39.0",
     "solid-js": "^1.8.3",
     "solid-start": "^0.3.8"
   },
